--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -12,6 +12,8 @@
     display: block;
     border: 4px solid #dbdbdb;
     transition: 400ms ease-out;
+    width: 400px;
+    height: 350px;
 }
 
 .portfolio-item:hover {
@@ -39,3 +41,5 @@
 .portfolio-item:hover::after{
     top: 20%;
 }
+
+
