--- a/src/css/style.css
+++ b/src/css/style.css
@@ -215,6 +215,16 @@ connect-details img{
     background-color: #edd7d4;
   }
 
+  .container-client-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    background-color: #c0d9fc79;
+    margin: 0px 50px 100px 50px;
+    padding: 10px 30px;
+    text-align: center;
+  }
 
   /* ////////////////////////////////// */
 
